--- a/.prettierrc
+++ b/.prettierrc
@@ -2,18 +2,12 @@
 	"useTabs": false,
 	"singleQuote": true,
 	"trailingComma": "all",
-	"printWidth": 140,
+	"printWidth": 80,
 	"tabWidth": 4,
 	"semi": false,
 	"plugins": [
-		"./index.js"
+		"./plugin.js"
 	],
-	"overrides": [
-		{
-			"files": "*.svelte",
-			"options": {
-				"parser": "svelte"
-			}
-		}
-	]
+	"lineRefinementsClassPadding": true,
+	"lineRefinementsSingleParameterLine": true
 }
