--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "prettier-plugin-line-refinements",
   "version": "0.1.2",
   "description": "A Prettier plugin to refine line breaks in code formatting.",
-  "homepage": "https://github.com/kloshih/reflecter",
+  "homepage": "https://github.com/kloshih/prettier-plugin-line-refinements",
   "keywords": [
     "prettier",
     "plugin",
