--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "Apache-2.0",
   "main": "plugin.js",
   "scripts": {
-    "test": "bun test"
+    "test": "bun test",
+    "postversion": "git tag  git push && git push --tags"
   },
   "devDependencies": {
     "@types/bun": "latest",
