--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "license": "Apache-2.0",
   "main": "plugin.js",
   "scripts": {
-    "test": "bun test",
-    "postversion": "git tag  git push && git push --tags"
+    "test": "bun test"
   },
   "devDependencies": {
     "@types/bun": "latest",
